Fixed button and form scaling for mobile, though Code2Text will not run on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,12 @@ body {
 	padding: 11px 15px 11px 0;
 }
 
+@media only screen and (max-width: 600px) {
+    .StripeElement {
+        width: 100%; 
+    }
+}
+
 button {
 	display: block;
 	font-size: 16px;
